### Changed - レイアウト調整

--- a/views/events/screeningEventSeries/index.ejs
+++ b/views/events/screeningEventSeries/index.ejs
@@ -137,10 +137,10 @@ Aa-3
                                         <span>表示</span>
                                     </a>
                                 </td>
-                                <td name="id" class="text-center">
-                                    <a target="_blank" class="btn btn-sm btn-primary"
-                                        href="/events/screeningEventSeries/$id$/update">
-                                        <i class="fas fa-edit"></i>
+                                <td name="id">
+                                    <a target="_blank" href="/events/screeningEventSeries/$id$/update">
+                                        編集
+                                        <i class="material-icons" style="font-size: 1.2em;">open_in_new</i>
                                     </a>
                                 </td>
                             </tr>
