--- a/views/ticketType/index.ejs
+++ b/views/ticketType/index.ejs
@@ -185,9 +185,10 @@ Aa-6
                                         表示
                                     </a>
                                 </td>
-                                <td name="id" class="text-center">
-                                    <a target="_blank" class="btn btn-sm btn-primary" href="/ticketTypes/$id$/update">
-                                        <i class="fas fa-edit"></i>
+                                <td name="id">
+                                    <a target="_blank" href="/ticketTypes/$id$/update">
+                                        編集
+                                        <i class="material-icons" style="font-size: 1.2em;">open_in_new</i>
                                     </a>
                                 </td>
                             </tr>
