--- a/views/ticketTypeGroup/index.ejs
+++ b/views/ticketTypeGroup/index.ejs
@@ -95,10 +95,10 @@ Aa-8
                                         <span>表示</span>
                                     </a>
                                 </td>
-                                <td name="id" class="text-center">
-                                    <a target="_blank" class="btn btn-sm btn-sm btn-primary"
-                                        href="/ticketTypeGroups/$id$/update">
-                                        <i class="fas fa-edit"></i>
+                                <td name="id">
+                                    <a target="_blank" href="/ticketTypeGroups/$id$/update">
+                                        編集
+                                        <i class="material-icons" style="font-size: 1.2em;">open_in_new</i>
                                     </a>
                                 </td>
                             </tr>
