### Changed - レイアウト調整

--- a/views/events/screeningEventSeries/index.ejs
+++ b/views/events/screeningEventSeries/index.ejs
@@ -115,17 +115,17 @@ Aa-3
                                         <i class="material-icons" style="font-size: 1.2em;">open_in_new</i>
                                     </a>
                                 </td>
-                                <td name="location.id__location.name.ja">
+                                <td name="location.id__location.name.ja|slice">
                                     <a target="_blank"
                                         href="/places/movieTheater/$location.id$/update">$location.name.ja$
                                         <i class="material-icons" style="font-size: 1.2em;">open_in_new</i></a>
                                 </td>
-                                <td name="workPerformed.id__workPerformed.identifier__workPerformed.name">
+                                <td name="workPerformed.id__workPerformed.identifier__workPerformed.name|slice">
                                     <a target="_blank"
                                         href="/creativeWorks/movie/$workPerformed.id$/update">$workPerformed.name$
                                         <i class="material-icons" style="font-size: 1.2em;">open_in_new</i></a>
                                 </td>
-                                <td name="name.ja">
+                                <td name="name.ja|slice">
                                     $name.ja$
                                 </td>
                                 <td name="startDay__endDay">$startDay$ - $endDay$</td>
