--- a/views/places/screeningRoom/index.ejs
+++ b/views/places/screeningRoom/index.ejs
@@ -74,15 +74,15 @@ SR-01
                                         <i class="material-icons" style="font-size: 1.2em;">open_in_new</i>
                                     </a>
                                 </td>
-                                <td name="containedInPlace.branchCode__containedInPlace.name.ja">
+                                <td name="containedInPlace.branchCode__containedInPlace.name.ja|slice">
                                     $containedInPlace.branchCode$<br>
                                     $containedInPlace.name.ja$<br>
                                 </td>
-                                <td name="name.ja__name.en">
+                                <td name="name.ja|slice__name.en|slice">
                                     $name.ja$<br>
                                     $name.en$
                                 </td>
-                                <td name="address.ja__address.en">
+                                <td name="address.ja|slice__address.en|slice">
                                     $address.ja$<br>
                                     $address.en$
                                 </td>
