--- a/views/ticketType/index.ejs
+++ b/views/ticketType/index.ejs
@@ -154,7 +154,7 @@ Aa-6
                                     <span class="badge badge-secondary">$availability$</span>
                                 </td>
                                 <td name="category.codeValue">$category.codeValue$</td>
-                                <td name="name.ja__name.en">$name.ja$<br>$name.en$</td>
+                                <td name="name.ja|slice__name.en|slice">$name.ja$<br>$name.en$</td>
                                 <td name="priceSpecification.price__priceSpecification.priceCurrency__priceSpecification.accounting.accountsReceivable__priceSpecification.priceCurrency__referenceQuantity.value"
                                     class="text-right">
                                     $priceSpecification.price$ $priceSpecification.priceCurrency$ /
