--- a/views/creativeWorks/movie/index.ejs
+++ b/views/creativeWorks/movie/index.ejs
@@ -22,7 +22,7 @@ Aa-10
             <div class="form-row">
                 <div class="form-group bmd-form-group col-md-6">
                     <label for="identifier" class="bmd-label-static">
-                        作品コード
+                        コード
                     </label>
                     <input type="text" class="form-control" name="identifier" id="identifier" placeholder=""
                         maxlength=64 value="">
@@ -30,7 +30,7 @@ Aa-10
 
                 <div class="form-group bmd-form-group col-md-6">
                     <label for="name" class="bmd-label-static">
-                        作品名
+                        名称
                     </label>
                     <input class="form-control" name="name" id="name" placeholder="" maxlength=64 value="">
                 </div>
@@ -102,8 +102,8 @@ Aa-10
                     <table class="table">
                         <thead class="text-primary">
                             <tr>
-                                <th>作品コード</th>
-                                <th class="text-left">作品名<br>サブタイトル</th>
+                                <th>コード</th>
+                                <th>名称</th>
                                 <th>上映時間</th>
                                 <th>レイティング</th>
                                 <th>公開日<br>興行終了予定日</th>
@@ -119,8 +119,8 @@ Aa-10
                                         <i class="material-icons" style="font-size: 1.2em;">open_in_new</i>
                                     </a>
                                 </td>
-                                <td name="name__headline">
-                                    $name$<br>$headline$
+                                <td name="name|slice">
+                                    $name$
                                 </td>
                                 <td name="durationAsMinutes" class="text-right">$durationAsMinutes$ 分</td>
                                 <td name="contentRating" class="text-center">$contentRating$</td>
