--- a/views/places/movieTheater/index.ejs
+++ b/views/places/movieTheater/index.ejs
@@ -68,7 +68,7 @@ Aa-12
                                         <i class="material-icons" style="font-size: 1.2em;">open_in_new</i>
                                     </a>
                                 </td>
-                                <td name="name.ja__name.en">
+                                <td name="name.ja|slice__name.en|slice">
                                     $name.ja$<br>
                                     $name.en$
                                 </td>
