--- a/views/places/seat/index.ejs
+++ b/views/places/seat/index.ejs
@@ -87,16 +87,16 @@ ST-01
                                     </a>
                                 </td>
                                 <td
-                                    name="containedInPlace.containedInPlace.containedInPlace.branchCode__containedInPlace.containedInPlace.containedInPlace.name.ja">
+                                    name="containedInPlace.containedInPlace.containedInPlace.branchCode__containedInPlace.containedInPlace.containedInPlace.name.ja|slice">
                                     $containedInPlace.containedInPlace.containedInPlace.branchCode$<br>
                                     $containedInPlace.containedInPlace.containedInPlace.name.ja$<br>
                                 </td>
                                 <td
-                                    name="containedInPlace.containedInPlace.branchCode__containedInPlace.containedInPlace.name.ja">
+                                    name="containedInPlace.containedInPlace.branchCode__containedInPlace.containedInPlace.name.ja|slice">
                                     $containedInPlace.containedInPlace.branchCode$<br>
                                     $containedInPlace.containedInPlace.name.ja$<br>
                                 </td>
-                                <td name="containedInPlace.branchCode__containedInPlace.name.ja">
+                                <td name="containedInPlace.branchCode__containedInPlace.name.ja|slice">
                                     $containedInPlace.branchCode$<br>
                                     $containedInPlace.name.ja$<br>
                                 </td>
