--- a/views/ticketTypeGroup/index.ejs
+++ b/views/ticketTypeGroup/index.ejs
@@ -83,7 +83,7 @@ Aa-8
                                         <i class="material-icons" style="font-size: 1.2em;">open_in_new</i>
                                     </a>
                                 </td>
-                                <td name="name.ja">$name.ja$</td>
+                                <td name="name.ja|slice">$name.ja$</td>
                                 <td name="offerCount__id" class="text-center">
                                     <a href="javascript:void(0)" class="popupListTicketType" data-id="$id$">
                                         $offerCount$ 券種
