--- a/views/ticketType/_listTicketTypeGroup.ejs
+++ b/views/ticketType/_listTicketTypeGroup.ejs
@@ -8,19 +8,17 @@
                 </button>
             </div>
             <div class="modal-body">
-                <div class="panel-body">
-                    <div id="list" class="table-responsive">
-                        <table class="table">
-                            <thead class="text-primary">
-                                <tr>
-                                    <th>券種グループ名</th>
-                                </tr>
-                            </thead>
-                            <tbody id="listTicketTypeGroup">
+                <div class="table-responsive">
+                    <table class="table table-sm">
+                        <thead class="text-primary">
+                            <tr>
+                                <th>名称</th>
+                            </tr>
+                        </thead>
+                        <tbody id="listTicketTypeGroup">
 
-                            </tbody>
-                        </table>
-                    </div>
+                        </tbody>
+                    </table>
                 </div>
             </div>
             <div class="modal-footer">
