--- a/views/ticketTypeGroup/_listTicketTypes.ejs
+++ b/views/ticketTypeGroup/_listTicketTypes.ejs
@@ -8,23 +8,17 @@
                 </button>
             </div>
             <div class="modal-body">
-                <div class="panel-body">
-                    <div id="list" class="" style="display:block;">
+                <div class="table-responsive">
+                    <table class="table table-sm">
+                        <thead class="text-primary">
+                            <tr>
+                                <th>名称</th>
+                            </tr>
+                        </thead>
+                        <tbody id="listTicketType">
 
-                        <div class="table-responsive">
-                            <table class="table">
-                                <thead class="text-primary">
-                                    <tr>
-                                        <th>券種名</th>
-                                    </tr>
-                                </thead>
-                                <tbody id="listTicketType">
-
-                                </tbody>
-                            </table>
-                        </div>
-
-                    </div>
+                        </tbody>
+                    </table>
                 </div>
             </div>
             <div class="modal-footer">
