--- a/views/creativeWorks/movie/index.ejs
+++ b/views/creativeWorks/movie/index.ejs
@@ -106,7 +106,8 @@ Aa-10
                                 <th>名称</th>
                                 <th>上映時間</th>
                                 <th>レイティング</th>
-                                <th>公開日<br>興行終了予定日</th>
+                                <th>公開日</th>
+                                <th>興行終了予定日</th>
                                 <th>追加特性</th>
                                 <th></th>
                             </tr>
@@ -122,10 +123,10 @@ Aa-10
                                 <td name="name|slice">
                                     $name$
                                 </td>
-                                <td name="durationAsMinutes" class="text-right">$durationAsMinutes$ 分</td>
+                                <td name="durationAsMinutes" class="text-right">$durationAsMinutes$ min</td>
                                 <td name="contentRating" class="text-center">$contentRating$</td>
-                                <td name="dayPublished__dayAvailabilityEnds" class="text-left">
-                                    $dayPublished$<br>$dayAvailabilityEnds$</td>
+                                <td name="dayPublished">$dayPublished$</td>
+                                <td name="dayAvailabilityEnds">$dayAvailabilityEnds$</td>
                                 <td name="identifier__addtionalProperty">
                                     <a href="javascript:void(0)" class="showAdditionalProperty"
                                         data-identifier="$identifier$">
