--- a/views/places/screeningRoom/index.ejs
+++ b/views/places/screeningRoom/index.ejs
@@ -75,16 +75,14 @@ SR-01
                                     </a>
                                 </td>
                                 <td name="containedInPlace.branchCode__containedInPlace.name.ja|slice">
-                                    $containedInPlace.branchCode$<br>
-                                    $containedInPlace.name.ja$<br>
+                                    <span class="font-italic text-muted">$containedInPlace.branchCode$</span>
+                                    $containedInPlace.name.ja$
                                 </td>
-                                <td name="name.ja|slice__name.en|slice">
-                                    $name.ja$<br>
-                                    $name.en$
+                                <td name="name.ja|slice">
+                                    $name.ja$
                                 </td>
-                                <td name="address.ja|slice__address.en|slice">
-                                    $address.ja$<br>
-                                    $address.en$
+                                <td name="address.ja|slice">
+                                    $address.ja$
                                 </td>
                                 <td name="openSeatingAllowed">
                                     $openSeatingAllowed$<br>
