--- a/views/places/seat/index.ejs
+++ b/views/places/seat/index.ejs
@@ -88,17 +88,17 @@ ST-01
                                 </td>
                                 <td
                                     name="containedInPlace.containedInPlace.containedInPlace.branchCode__containedInPlace.containedInPlace.containedInPlace.name.ja|slice">
-                                    $containedInPlace.containedInPlace.containedInPlace.branchCode$<br>
-                                    $containedInPlace.containedInPlace.containedInPlace.name.ja$<br>
+                                    <span class="font-italic text-muted">$containedInPlace.containedInPlace.containedInPlace.branchCode$</span>
+                                    $containedInPlace.containedInPlace.containedInPlace.name.ja$
                                 </td>
                                 <td
                                     name="containedInPlace.containedInPlace.branchCode__containedInPlace.containedInPlace.name.ja|slice">
-                                    $containedInPlace.containedInPlace.branchCode$<br>
-                                    $containedInPlace.containedInPlace.name.ja$<br>
+                                    <span class="font-italic text-muted">$containedInPlace.containedInPlace.branchCode$</span>
+                                    $containedInPlace.containedInPlace.name.ja$
                                 </td>
                                 <td name="containedInPlace.branchCode__containedInPlace.name.ja|slice">
-                                    $containedInPlace.branchCode$<br>
-                                    $containedInPlace.name.ja$<br>
+                                    <span class="font-italic text-muted">$containedInPlace.branchCode$</span>
+                                    $containedInPlace.name.ja$
                                 </td>
                                 <td name="seatingTypeStr">
                                     $seatingTypeStr$<br>
