--- a/public/scss/_common.scss
+++ b/public/scss/_common.scss
@@ -250,3 +250,10 @@ body {
         }
     }
 }
+.card  {
+    .card-body {
+        .form-group {
+            margin: 1rem 0 0;
+        }
+    }
+}
