--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="ja" class="perfect-scrollbar-on" style="font-size:14px;">
+<html lang="ja" class="" style="font-size:14px;">
 <%- include('./head') %>
 
 <body>
     <div class="wrapper ">
-        <div class="sidebar" data-color="purple" data-background-color="black" data-image="/images/sidebar-1.jpg">
+        <div class="sidebar" data-color="purple" data-background-color="black" >
             <!--
               Tip 1: You can change the color of the sidebar using: data-color="purple | azure | green | orange | danger"
       
